--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,7 +15,7 @@ en:
     nowopen: "Airport, Batugade, Salele, stores are now open"
     batugade: "Batugade"
     online: "Visit our online store to see products and pricing"
-    stores:  "Stores in Oe-Cussi and Salele coming soon."
+    stores:  "Stores in Oe-Cussi coming soon."
     para1: "KONI DONASI (KD) program is collaborated between KONI (Komittee Olah Raga Nasional Indonesia)- PT EstormTek Indonesia and supported by Telco provider in Indonesia (Telkomsel) to help KONI fundraising to support Indonesian athletes to achieve better facilities in sports training and upcoming events such as SEA GAMES 2018, ASIAN GAMES 2018 and many more."
     para2: "This Donation program starts with the SMS KONI donation and launched on August 2015. We work with some of the biggest telco provide in Indonesia, TELKOMSEL and XL as a SMS platform providers."
     para3: "With a simple text message, you can donate Rp 2,200/SMS enough to support your athletes to do better in representing Indonesia in any sport events."
