update to pantai kelapa wwarehouse

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -60,7 +60,7 @@ en:
   contact:
     title: "About Us/Jobs"
     address: Dili Address
-    office: "Landmark Plaza, Dili, Timor Leste"
+    office: "Pantai Kelapa, Dili, Timor Leste"
     email: "info@seadutyfree.com"
     jobs: "Jobs"
   
